feat: Convert to Vercel-ready deployment with serverless API

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ dist-ssr
 *.sln
 *.sw?
 .gemini_api_key
+
+# Vercel
+.vercel
+
+# Environment files
+.env
+.env.local
+.env.production
+.gemini_api_key
+debug.log
