--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "node-fetch": "^2.7.0",
     "openai": "^5.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "undici": "^7.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -30,6 +32,5 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  },
-  "proxy": "http://localhost:8787"
+  }
 }
